--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,5 +1,25 @@
 .header {
-  padding: 25px  20px;
+  padding: 25px 0;
   display: flex;
   align-items: center;
+  max-width: 280px;
+  margin: 0 auto 0;
+}
+
+@media (min-width: 760px) {
+  .header {
+    max-width: 700px;
+  }
+}
+
+@media (min-width: 1020px) {
+  .header {
+    max-width: 940px;
+  }
+}
+
+@media (min-width: 1360px) {
+  .header {
+    max-width: 1120px;
+  }
 }
