--- a/src/blocks/pictures/pictures.css
+++ b/src/blocks/pictures/pictures.css
@@ -1,7 +1,34 @@
 .pictures {
-  display: flex;
-  flex-direction: column;
   row-gap: 21px;
-  align-items: center;
+  column-gap: 25px;
+  margin: 0 auto 0;
   padding: 45px 0 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 280px);
+  justify-content: center;
+  grid-auto-rows: 205px;
+}
+
+@media (min-width: 760px) {
+  .pictures{
+    grid-template-columns: repeat(auto-fill, 340px);
+    grid-auto-rows: 249px;
+  }
+}
+
+@media (min-width: 1020px) {
+  .pictures{
+    grid-template-columns: repeat(auto-fill, 300px);
+    grid-auto-rows: 230px;
+    min-width: 940px;
+    max-width: 1120px;
+  }
+}
+
+@media (min-width: 1360px) {
+  .pictures{
+    grid-template-columns: repeat(auto-fill, 360px);
+    grid-auto-rows: 275px;
+    max-width: 1400px;
+  }
 }
